2010-01-22  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Don't call seek on a NoneType.

        * Scripts/webkitpy/statusserver.py:

2010-01-22  Petri Latvala  <petri.latvala@nomovok.com>

        Reviewed by David Levin.

        check-webkit-style breaks on files with unknown types
        https://bugs.webkit.org/show_bug.cgi?id=34001

        For files with type FileType.NONE, dispatch_processor returns None.

        * Scripts/webkitpy/style/checker.py: Don't call process_file with a processor of value None.

2010-01-22  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Make bugzilla.py and webkitport.py conform to pep8
        https://bugs.webkit.org/show_bug.cgi?id=34015

        This patch makes webkitport.py and bugzilla.py mostly conform to PEP8
        style as enforced by pep8.py.  I wasn't able to get rid of all the
        errors because I'm not sure how to wrap some lines properly.  Also,
        there are a few deprication errors that I couldn't resolve easily.
        However, this is a massive improvement in compliance.

        * Scripts/webkitpy/bugzilla.py:
        * Scripts/webkitpy/webkitport.py:

2010-01-22  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Limit length of EWS results to 5MB
        https://bugs.webkit.org/show_bug.cgi?id=34016

        Hopefully this will fix the bug where the results link doesn't appear.
        Our current theory is that the results blob is too big and the server
        is rejecting the request with a 500 error.  That causes us to re-try
        the post, but when we re-try the StringIO buffer has its seek pointer
        at the end.

        * Scripts/webkitpy/commands/queues.py:
        * Scripts/webkitpy/statusserver.py:

2010-01-22  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Adam Barth.

        Made check-webkit-style able to check patches when script not
        run from source root. Also consolidated external references