@@ -1,3 +1,14 @@
+2010-01-21  Joe Mason  <jmason@rim.com>
+
+        Reviewed by Adam Barth.
+
+        webkit-patch should retry on invalid password
+        https://bugs.webkit.org/show_bug.cgi?id=33955
+
+        Ask for bugs.webkit.org authentication in a loop.
+
+        * Scripts/webkitpy/bugzilla.py:
+
 2010-01-22  Adam Barth  <abarth@webkit.org>
 
         Unreviewed.  Don't call seek on a NoneType.
